--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,9 @@ click==8.2.1
 filelock==3.19.1
 Flask==3.1.2
 flask-cors==6.0.1
+Flask-SQLAlchemy==3.1.1
+Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.7
 fsspec==2025.7.0
 hf-xet==1.1.9
 huggingface-hub==0.34.4
