--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^10.8.0",
+    "@sentry/tracing": "^7.120.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
