Enhance scanning functionality by adding advanced configuration options for scans, including max depth, scan delay, and custom headers. Implement new admin analytics and dashboard endpoints for comprehensive user and scan statistics. Update requirements to include new dependencies for analytics and performance improvements.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,7 @@ transformers==4.33.2
 torch==2.0.1
 gunicorn==21.2.0
 psycopg2-binary==2.9.7
+boto3==1.40.21
+sentry-sdk==2.35.1
+flask-limiter==3.12
+flask-compress==1.18
