--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,3 +20,6 @@ redis==6.4.0
 flask-login==0.6.3
 gevent==25.5.1
 psutil==7.0.0
+flask-socketio==5.5.1
+prometheus-client==0.22.1
+flask-restx==1.3.0
