--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
     "@sentry/react": "^10.8.0",
     "@sentry/tracing": "^7.120.4",
     "chart.js": "^4.5.0",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
