--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,3 +23,11 @@ psutil==7.0.0
 flask-socketio==5.5.1
 prometheus-client==0.22.1
 flask-restx==1.3.0
+stripe==8.0.0
+pyfcm==1.5.4
+sentence-transformers==2.2.2
+reportlab==4.0.4
+celery==5.3.0
+flask-uploads==0.2.1
+pybreaker==0.9.0
+scikit-learn==1.3.0
