--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.7.1",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "qrcode.react": "^3.2.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
