--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
+    "react-icons": "^5.5.0",
     "react-joyride": "^2.8.0",
     "socket.io-client": "^4.8.1"
   },
