--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,37 +1,68 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.7
-Werkzeug==2.3.7
-requests==2.31.0
-beautifulsoup4==4.12.2
-transformers==4.33.2
-torch==2.0.1
-gunicorn==21.2.0
-psycopg2-binary==2.9.7
+# requirements.txt
+
+aniso8601==10.0.1
+async-timeout==5.0.1
+attrs==25.3.0
+beautifulsoup4==4.13.5
+bidict==0.23.1
+blinker==1.9.0
 boto3==1.40.21
-sentry-sdk==2.35.1
-flask-limiter==3.12
-flask-compress==1.18
-sendgrid==6.12.4
-locust==2.39.1
-redis==6.4.0
-flask-login==0.6.3
-gevent==25.5.1
-psutil==7.0.0
-flask-socketio==5.5.1
-prometheus-client==0.22.1
+botocore==1.40.25
+Brotli==1.1.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+Deprecated==1.2.18
+Flask==3.1.2
+Flask-Compress==1.18
+flask-cors==6.0.1
+Flask-JWT-Extended==4.7.1
+Flask-Limiter==3.12
 flask-restx==1.3.0
-stripe==8.0.0
-pyfcm==1.5.4
-sentence-transformers==2.2.2
-reportlab==4.0.4
-celery==5.3.0
-flask-uploads==0.2.1
-pybreaker==0.9.0
-scikit-learn==1.3.0
-redis==4.6.0
-boto3==1.34.0
-pyotp==2.9.0
-reportlab==4.0.4
+Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+h11==0.16.0
+idna==3.10
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jmespath==1.0.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+limits==5.5.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+numpy==2.2.6
+ordered-set==4.1.0
+packaging==25.0
+pillow==11.3.0
+prometheus_client==0.22.1
+psutil==7.0.0
+pybreaker==1.4.0
+Pygments==2.19.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-engineio==4.12.2
+python-socketio==5.13.0
+pytz==2025.2
+pyzstd==0.17.0
+redis==6.4.0
+referencing==0.36.2
+reportlab==4.4.3
+requests==2.32.5
+rich==13.9.4
+rpds-py==0.27.1
+s3transfer==0.13.1
+sentry-sdk==2.37.0
+simple-websocket==1.1.0
+six==1.17.0
+soupsieve==2.8
+SQLAlchemy==2.0.43
+stripe==12.5.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
+wrapt==1.17.3
+wsproto==1.2.0
