--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-joyride": "^2.8.0",
+    "react-router-dom": "^6.30.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
